--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -40,7 +40,8 @@
   
   display: inline-flex;
   gap: 20px;
-  margin-left: 90px;
+  /* margin-left: 00px; */
+  
 }
 
 .icon2 {
@@ -119,6 +120,12 @@
   .user-name{
     display: none;
   }
+  .navbar-search{
+    display: none;
+  }
+  .navbar-search-btn{
+    display: none;
+  }
 }
 .navbar-search {
   
@@ -130,23 +137,25 @@
 .navbar-search-input {
   padding: 8px; /* Slightly increase padding for better touch targets */
   border: 1px solid #ccc;
-  border-radius: 3px;
-  
+  border-radius: 50px;
+  margin-left: 30px;
   
 }
 
 .navbar-search-btn {
-  padding: 8px; /* Slightly increase padding for consistency */
-  background-color: #4CAF50;
+  padding: 9px; /* Slightly increase padding for consistency */
+  background-color: #211f1f;
   color: white;
   border: none;
-  border-radius: 3px;
+  border-radius: 50px;
   cursor: pointer;
   align-items: center;
+  margin-left: 4px;
+  position:relative;
 }
 
 .navbar-search-btn:hover {
-  background-color: #45a049;
+  background-color: #313437;
 }
 
 
