--- a/src/pages/pagestyle/Cart.css
+++ b/src/pages/pagestyle/Cart.css
@@ -2,12 +2,14 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  
 }
 
 .cart-title {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 20px;
+  
 }
 
 .cart-items2 {
@@ -102,6 +104,8 @@
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index:1000 ;
+    transition: all 0.8s ease-in-out;
+   
 }
 
 .remove{
